# lp_image_transcreation

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  debug_import.py  docker-compose.yml  pyproject.toml  requirements.txt
data/config/: realization_config.json
data/knowledge_base/: countries_graph.json  countries_graph.jsonl  countries_graph.pkl
docs/: AI.md  FUTURE_SCOPE.md  IMPROVEMENTS.md  MODEL_WORKFLOW_COST_QUALITY.md  QUICKSTART.md  REASONING.md  knowledge_graph.md
scripts/: README_test_api.md  docker_shell.bat  docker_shell.sh  image_generation_prompts.txt  run_docker.bat  run_docker.sh  test_api.py
scripts/knowledge_graph/: countries.json  generator.py
src/: main.py
src/perception/: README.md  __init__.py  __main__.py  main.py
src/realization/: README.md  __init__.py  config_loader.py  engine.py  inpaint.py  main.py  metrics.py  models.py  prompt_builder.py  prompt_config.py  prompt_refiner.py  schema.py
src/reasoning/: README.md  engine.py  knowledge_loader.py  llm_client.py  main.py  policy_config.py  prompt_config.py  schemas.py  types.py
src/utilities/: __init__.py  terminal_logger.py
tests/: conftest.py  test_realization.py  test_reasoning.py  test_reasoning_manual.py
tests/integration/: test_attribute_fix.py  test_infographic_regression.py  test_model_sharing.py  test_pipeline_integration.py
tests/unit/: test_builders.py  test_config.py  test_core.py  test_detectors.py  test_icon_semantic_analyzer.py  test_main_pipeline_behavior.py  test_object_captioner.py  test_ocr.py  test_package.py  test_perception_infographic_upgrades.py  test_realization_config_loader.py  test_realization_engine.py  test_realization_inpaint.py  test_realization_main.py  test_realization_models.py  test_realization_prompt_refiner.py  test_realization_quality_gate.py  test_realization_rich_quality_gate.py  test_realization_schema.py  test_realization_text_style.py  test_reasoning_engine.py  test_reasoning_infographic_mode.py  test_reasoning_knowledge_loader.py  test_reasoning_llm_client.py  test_reasoning_main.py  test_reasoning_policy_config.py  test_utils.py  (+6 more)
(+42 files in other folders)
